[package]
name = "autopy"
version = "0.1.0"
authors = ["Michael Sanders <michael.sanders@fastmail.com>"]

[lib]
## Python extension modules should be compiled as 'cdylib'
crate-type = ["cdylib"]
name = "autopy"

[dependencies.autopilot]
version = "0.2.2"

[dependencies.pyo3]
version = "0.6.0"
default-features = false

[dependencies.image]
version = "0.22.2"

[dependencies.either]
version = "1.5.0"

[dependencies.libc]
version = "0.2.62"
