[package]
name = "autopy"
version = "0.1.0"
edition = "2021"
authors = ["Michael Sanders <crates@michaelsande.rs>"]

[lib]
## Python extension modules should be compiled as 'cdylib'
crate-type = ["cdylib"]
name = "autopy"

[dependencies.autopilot]
version = "0.4.0"

[dependencies.pyo3]
version = "0.23.5"

[dependencies.image]
version = "0.22.4"

[dependencies.either]
version = "1.15.0"

[dependencies.libc]
version = "0.2.171"
